Improved portability of shell scripts
Improved fbdev driver: added setting for double buffer to avoid flickering on menu (--fbdev-double-buffer)
Improved fbdev driver: added setting to avoid resolution change on Raspberry Pi full screen mode (--fbdev-no-res-change)
Improved ZX Spectrum Next emulation: added layer2 priority colour bit


Fixed Z80 halt behavior and PC location
Fixed disabling border when realvideo enabled on machines: Colecovision, Master System, MSX, SG1000, SpectraVideo
Fixed redrawing footer when fade out
Fixed showing character 127 on curses, stdout and simpletext video drivers
Fixed preserve breakpoints state when doing smartload
Fixed saving snapshot on some events that close ZEsarUX (F-key, AY Player, etc)
Fixed loading/saving TZX as Standard tape on Jupiter Ace
Fixed ejecting Spectravideo cartridge
Fixed segfault pressing F5 after pressing pause key
Fixed bug on OSD Adventure Keyboard when words of 5 characters lenght and setting sending final space enabled
Fixed crash when saving configuration file larger than 20kb

Fixed ZX Vision:
-Fixed hang when pressing cursor up/down on any tabbed menu with only one line (like Audio Waveform)
-Fixed glitches resizing some windows: AY Registers, Debug CPU, etc...
-Fixed flickering when resizing Keyboard Help window
-Fixed reducing all windows
-Fixed bug restoring windows on startup when a previous error was generated
-Fixed drawing scroll bars when window is not at the top of all windows
-Fixed drawing close button on background windows
-Fixed showing input tape insert state on menu and zx desktop icon when tape can't be opened
-Fixed window Hex Editor while moving or resizing
-Fixed refreshing Visual Real Tape window when Top Speed condition


Some other minor bugfixes and improvements



Version 10.0 - Clive Sinclair edition. 4 October 2021

There are lots of changes in this version, but some of them are remarkable:

- New machine emulated: Sega Master System